add_subdirectory(ctestfw)
add_subdirectory(genbrk)
add_subdirectory(genccode)
add_subdirectory(gencfu)
add_subdirectory(gencmn)
add_subdirectory(gencnval)
add_subdirectory(gendict)
add_subdirectory(gennorm2)
add_subdirectory(genrb)
add_subdirectory(gensprep)
add_subdirectory(gentest)
add_subdirectory(icuexportdata)
add_subdirectory(icuinfo)
add_subdirectory(icupkg)
add_subdirectory(icuswap)
add_subdirectory(makeconv)
add_subdirectory(pkgdata)
add_subdirectory(toolutil)
add_subdirectory(tzcode)