add_executable(cintltst)
target_link_libraries(cintltst PRIVATE icu_defaults icuuc ctestfw icui18n toolutil)

if(BUILD_TESTING)
    add_test(NAME cintltst COMMAND cintltst WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
endif()

target_sources(cintltst PRIVATE
    bocu1tst.c
    callcoll.c
    calltest.c
    capitst.c
    cbiapts.c
    cbididat.c
    cbiditransformtst.c
    cbiditst.c
    cbkittst.c
    ccaltst.c
    ccapitst.c
    ccolltst.c
    cconvtst.c
    cctest.c
    ccurrtst.c
    cdateintervalformattest.c
    cdattst.c
    cdetst.c
    cdtdptst.c
    cdtrgtst.c
    cestst.c
    cfintst.c
    cformtst.c
    cfrtst.c
    cg7coll.c
    cgendtst.c
    chashtst.c
    cintltst.c
    citertst.c
    cjaptst.c
    cldrtest.c
    cloctst.c
    cmsccoll.c
    cmsgtst.c
    cnmdptst.c
    cnormtst.c
    cnumtst.c
    cpluralrulestest.c
    cposxtst.c
    crelativedateformattest.c
    crestst.c
    creststn.c
    cstrcase.c
    cstrtest.c
    cturtst.c
    cucdapi.c
    cucdtst.c
    currtest.c
    custrtrn.c
    custrtst.c
    cutiltst.c
    encoll.c
    eurocreg.c
    hpmufn.c
    idnatest.c
    nccbtst.c
    ncnvfbts.c
    ncnvtst.c
    nfsprep.c
    nucnvtst.c
    putiltst.c
    reapits.c
    sorttest.c
    spooftest.c
    spreptst.c
    sprpdata.c
    stdnmtst.c
    tracetst.c
    trie2test.c
    trietest.c
    ucnvseltst.c
    ucptrietest.c
    ucsdetst.c
    udatatst.c
    udatpg_test.c
    uenumtst.c
    uformattedvaluetst.c
    ulistfmttest.c
    unumberformattertst.c
    unumberrangeformattertst.c
    uregiontest.c
    usettest.c
    usrchtst.c
    utexttst.c
    utf16tst.c
    utf8tst.c
    utmstest.c
    utransts.c)