add_library(fuzzer fuzzer_driver.cpp locale_util.cpp)
target_link_libraries(fuzzer PRIVATE icu_defaults icuuc)

function(add_fuzzer fuzzer_name)
    add_executable(${fuzzer_name} ${fuzzer_name}.cpp)
    target_link_libraries(${fuzzer_name} PRIVATE icu_defaults icuuc icui18n fuzzer)
endfunction()

add_fuzzer(break_iterator_fuzzer)
add_fuzzer(collator_compare_fuzzer)
add_fuzzer(collator_rulebased_fuzzer)
add_fuzzer(converter_fuzzer)
add_fuzzer(locale_fuzzer)
add_fuzzer(number_format_fuzzer)
add_fuzzer(ucasemap_fuzzer)
add_fuzzer(uloc_canonicalize_fuzzer)
add_fuzzer(uloc_for_language_tag_fuzzer)
add_fuzzer(uloc_get_name_fuzzer)
add_fuzzer(uloc_is_right_to_left_fuzzer)
add_fuzzer(uloc_open_keywords_fuzzer)
add_fuzzer(unicode_string_codepage_create_fuzzer)
add_fuzzer(uregex_open_fuzzer)