add_executable(intltest)
target_link_libraries(intltest PRIVATE icu_defaults ctestfw icuuc icui18n toolutil)

if(BUILD_TESTING)
    add_test(NAME intltest COMMAND intltest WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
endif()

target_sources(intltest PRIVATE
    aliastst.cpp
    allcoll.cpp
    alphaindextst.cpp
    apicoll.cpp
    astrotst.cpp
    bidiconf.cpp
    bytestrietest.cpp
    calcasts.cpp
    callimts.cpp
    calregts.cpp
    caltest.cpp
    caltztst.cpp
    canittst.cpp
    citrtest.cpp
    collationtest.cpp
    colldata.cpp
    compactdecimalformattest.cpp
    convtest.cpp
    cpdtrtst.cpp
    csdetest.cpp
    currcoll.cpp
    dadrcal.cpp
    dadrfmt.cpp
    datadrivennumberformattestsuite.cpp
    dcfmapts.cpp
    dcfmtest.cpp
    decoll.cpp
    displayoptions_test.cpp
    dtfmapts.cpp
    dtfmrgts.cpp
    dtfmtrtts.cpp
    dtfmttst.cpp
    dtifmtts.cpp
    dtptngts.cpp
    encoll.cpp
    erarulestest.cpp
    escoll.cpp
    ficoll.cpp
    fldset.cpp
    formatted_string_builder_test.cpp
    formattedvaluetest.cpp
    frcoll.cpp
    g7coll.cpp
    genderinfotest.cpp
    icusvtst.cpp
    idnaconf.cpp
    idnaref.cpp
    incaltst.cpp
    intltest.cpp
    itercoll.cpp
    itformat.cpp
    itmajor.cpp
    itrbbi.cpp
    itrbnf.cpp
    itrbnfp.cpp
    itrbnfrt.cpp
    itspoof.cpp
    ittrans.cpp
    itutil.cpp
    jacoll.cpp
    jamotest.cpp
    lcukocol.cpp
    listformattertest.cpp
    localebuildertest.cpp
    localematchertest.cpp
    locnmtst.cpp
    loctest.cpp
    lstmbetst.cpp
    measfmttest.cpp
    miscdtfm.cpp
    mnkytst.cpp
    msfmrgts.cpp
    nmfmapts.cpp
    nmfmtrt.cpp
    normconf.cpp
    nptrans.cpp
    numberformattesttuple.cpp
    numbertest_affixutils.cpp
    numbertest_api.cpp
    numbertest_decimalquantity.cpp
    numbertest_doubleconversion.cpp
    numbertest_modifiers.cpp
    numbertest_parse.cpp
    numbertest_patternmodifier.cpp
    numbertest_patternstring.cpp
    numbertest_permutation.cpp
    numbertest_range.cpp
    numbertest_simple.cpp
    numbertest_skeletons.cpp
    numfmtdatadriventest.cpp
    numfmtspectest.cpp
    numfmtst.cpp
    numrgts.cpp
    pluralmaptest.cpp
    plurfmts.cpp
    plurults.cpp
    pptest.cpp
    punyref.cpp
    quantityformattertest.cpp
    rbbiapts.cpp
    rbbimonkeytest.cpp
    rbbitst.cpp
    regcoll.cpp
    regextst.cpp
    regiontst.cpp
    reldatefmttest.cpp
    reptest.cpp
    restest.cpp
    restsnew.cpp
    scientificnumberformattertest.cpp
    sdtfmtts.cpp
    selfmts.cpp
    sfwdchit.cpp
    simpleformattertest.cpp
    simplethread.cpp
    srchtest.cpp
    ssearch.cpp
    static_unisets_test.cpp
    strcase.cpp
    string_segment_test.cpp
    strtest.cpp
    svccoll.cpp
    tchcfmt.cpp
    testidn.cpp
    testidna.cpp
    testutil.cpp
    textfile.cpp
    tfsmalls.cpp
    thcoll.cpp
    tmsgfmt.cpp
    tokiter.cpp
    transapi.cpp
    transrt.cpp
    transtst.cpp
    trcoll.cpp
    trnserr.cpp
    tscoll.cpp
    tsdate.cpp
    tsdcfmsy.cpp
    tsdtfmsy.cpp
    tsmthred.cpp
    tsnmfmt.cpp
    tsputil.cpp
    tstnorm.cpp
    tstnrapi.cpp
    tufmtts.cpp
    tzbdtest.cpp
    tzfmttst.cpp
    tzoffloc.cpp
    tzregts.cpp
    tzrulets.cpp
    tztest.cpp
    ucaconf.cpp
    ucdtest.cpp
    ucharstrietest.cpp
    unifiedcachetest.cpp
    units_data_test.cpp
    units_router_test.cpp
    units_test.cpp
    uobjtest.cpp
    usettest.cpp
    ustrtest.cpp
    uts46test.cpp
    utxttest.cpp
    uvectest.cpp
    v32test.cpp
    windttst.cpp
    winnmtst.cpp
    winutil.cpp)